[tool.poetry]
name = "get-pbh-bus-data"
version = "0.1.0"
description = ""
authors = ["brenosantos <brenoleandrosantos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
requests = "^2.32.3"
selenium = "^4.25.0"
boto3 = "^1.35.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
